--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "pandoc-workflow"]
 	path = pandoc-workflow
 	url = git@github.com:dhcolumbia/pandoc-workflow.git
+    branch = master
 [submodule "dhnotes.wiki"]
 	path = dhnotes.wiki
 	url = git@github.com:denten/dhnotes.wiki.git
+    branch = master
